UPDATE. Open graph fix

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 		<meta
 			property="og:title"
 			content="Rock, paper, scissor" />
-		<meta property=”og:image” content=”./assets/images/rps.jpeg” />
 		<meta
-			property="”og:description”"
+			property="og:image"
+			content="./assets/images/rps.jpeg" />
+		<meta
+			property="og:description"
 			content="Single player 'Rock, paper, scissor' game against computer" />
 		<meta
-			property="”og:type”"
+			property="og:type"
 			content="game" />
 
 		<meta charset="UTF-8" />
